...
}

@Preview(showBackground = true)
@Composable
private fun ShowFilterBottomSheet(){
    FilterBottomSheetContent(
        title = "Year",
        options = listOf("2023", "2022", "2021"),
        selectedOption = "2023",
        onOptionSelected = {}
    )
}
